glimpse/style.css
#glimpse {
  display: none;
  opacity: 0;
  transform: scaleY(0);
  position: fixed;
  top: 0; left: 0;
  width: 100%;
  height: 100%;
  justify-content: center;
  transition: opacity 0.3s ease;
  z-index: 21; /* 1 higher than Glance's popover */
}

#glimpse::before {
  content: '';
  position: absolute;
  top: 0; left: 0;
  width: 100%;
  height: 100%;
  background: var(--color-widget-background-highlight);
  opacity: 0;
  transition: opacity 0.3s ease;
}

#glimpse.show {
  opacity: 1;
  display: flex;
  transform: scaleY(1);
}

#glimpse.show::before {
  opacity: 0.9;
}

#glimpse .glimpse-wrapper {
  width: 100%;
  max-width: 1000px;
  margin: 3rem 2rem 0 2rem;
  height: calc(100vh - 4rem);
  z-index: 16;
  display: flex;
  flex-direction: column;
}

#glimpse .glimpse-result {
  overflow-y: auto;
  padding: 0 1rem 1rem 0;
  margin-right: -1rem;
  position: relative;
}

#glimpse .glimpse-result::before {
  content: '';
  position: sticky;
  top: 0;
  height: 2rem;
  display: block;
  pointer-events: none;
  background: linear-gradient(
    to bottom,
    hsl(var(--bghs),calc(var(--scheme) (var(--scheme) var(--bgl)) - 0.5%)),
    hsla(var(--bghs),calc(var(--scheme) (var(--scheme) var(--bgl)) - 0.5%),0)
  );
  z-index: 1;
  opacity: 0;
  transition: opacity 0.15s ease;
}

#glimpse .glimpse-result.is-scrolled::before {
  opacity: 1;
}

#glimpse .glimpse-close {
  display: flex;
  justify-content: flex-end;
}

#glimpse .close {
  cursor: pointer;
  width: 24px;
  height: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: auto;
  user-select: none;
}

#glimpse .close:hover {
  background-color: var(--color-negative);
  border-radius: var(--border-radius);
  color: var(--color-background);
}

#glimpse .close::before {
	content: '×';
	font-size: 23px;
	line-height: 1;
}

#glimpse .custom-page-loading-container {
  height: 15%;
  display: flex;
  align-items: center;
  justify-content: center;
  animation: loadingContainerEntrance 200ms backwards;
  animation-delay: 150ms;
  font-size: 2rem;
}

#glimpse .glimpse-search-suggest-container {
  gap: 0.3rem;
}

#glimpse .glimpse-bang-suggest,
#glimpse .glimpse-search-suggest {
  position: relative;
  display: none;
  padding: 2px;
  overflow-y: auto;
  background: var(--color-widget-background);
  border-radius: 0 0 5px 5px;
  border: 1px solid hsla(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl) + 12%)), 0.15);
  box-shadow: 0px 1px 0px 0px hsl(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl)) - 0.5%));
}

#glimpse .glimpse-bang-suggest::before,
#glimpse .glimpse-bang-suggest::after,
#glimpse .glimpse-search-suggest::before,
#glimpse .glimpse-search-suggest::after {
  content: "";
  position: absolute;
  width: 2rem;
  height: 100%;
  top: 0px;
  bottom: 1rem;
  z-index: 10;
  opacity: 0.2;
  pointer-events: none;
  transition-duration: 0.2s;
}

#glimpse .glimpse-bang-suggest::before,
#glimpse .glimpse-search-suggest::before {
  background: linear-gradient(to right, var(--color-background), transparent);
}

#glimpse .glimpse-bang-suggest::after,
#glimpse .glimpse-search-suggest::after {
  right: 0px;
  background: linear-gradient(to left, var(--color-background), transparent);
}

#glimpse .glimpse-bang-suggest ul,
#glimpse .glimpse-search-suggest ul {
  display: flex;
  flex: 1;
  padding-bottom: 0.3rem;
  overflow-x: auto;
  scrollbar-width: thin;
}

#glimpse .glimpse-bang-suggest li,
#glimpse .glimpse-search-suggest li {
  display: flex;
  flex: 1;
  text-align: center;
  align-content: center;
}

#glimpse .glimpse-bang-suggest li > span,
#glimpse .glimpse-search-suggest li > a {
  flex: 1;
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding: 3px 15px;
  cursor: pointer;
  user-select: none;
}

#glimpse .glimpse-bang-suggest li:hover,
#glimpse .glimpse-search-suggest li:hover {
  background-color: var(--color-primary);
  border-radius: var(--border-radius);
  color: var(--color-background);
}

#glimpse .widget-content:not(.widget-content-frameless) {
  background: var(--color-widget-background);
  border-radius: var(--border-radius);
  border: 1px solid hsla(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl) + 12%)), 0.5);
  box-shadow: 0px 3px 0px 0px hsl(var(--bghs), calc(var(--scheme) (var(--scheme) var(--bgl)) - 0.5%));
}

#glimpse.fade-in {
  animation: fadeIn 0.5s backwards cubic-bezier(0.16, 1, 0.3, 1);
}

#glimpse.fade-out {
  animation: fadeOut 0.5s forwards cubic-bezier(0.16, 1, 0.3, 1);
}

@keyframes fadeOut {
  from { opacity: 1; }
  to { opacity: 0; }
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@media (max-width: 1190px) {
  #glimpse .glimpse-wrapper {
    padding: 0 1rem;
  }

  #glimpse .glimpse-wrapper.bottom-search {
    flex-direction: column-reverse;
    padding: 0 1rem 2rem;
  }
}

/* Glance overrides */
.glimpse-search-nav {
  cursor: pointer;
  display: flex;
  height: 100%;
  width: 4rem;
  justify-content: center;
  align-content: center;
  opacity: 0.7;
  transition: opacity 0.3s ease;
  padding: 0.8rem;
}

.glimpse-search-nav:hover {
  opacity: 1;
}

.glimpse-search-nav:hover > .search-icon {
  stroke: var(--color-text-highlight);
}

.glimpse-search-mobile-nav {
  cursor: pointer;
}

/* Custom Menu Overrides */
.popover-content .custom-menu-items .custom-menu-item .search-icon {
  color: var(--color-text-base);
}

.popover-content .custom-menu-items .custom-menu-item:hover .search-icon {
  color: var(--color-separator);
}

